docs(icons): rename icons article slug

--- a/upgrade/breaking-changes/3-0-0.md
+++ b/upgrade/breaking-changes/3-0-0.md
@@ -151,7 +151,7 @@ protected void OnGridRead(GridReadEventArgs args)
 ### Other Common Changes
 
 - [`ToODataString` extension method](/blazor-ui/api/Telerik.Blazor.Extensions.DataSourceExtensions) is moved to the [`Telerik.Blazor.Extensions` namespace](/blazor-ui/api/Telerik.Blazor.Extensions). The `Telerik.Blazor.ExtensionMethods` namespace is removed in favor of `Telerik.Blazor.Extensions`.
-- [`Telerik.Blazor.IconName` class]({%slug common-kb-migration-from-iconname%}) ([obsolete since version 2.0]({%slug changes-in-2-0-0%})) is removed. Use the icon names from the [Built-in Icons documentation]({%slug general-information/font-icons%}#icons-list).
+- [`Telerik.Blazor.IconName` class]({%slug common-kb-migration-from-iconname%}) ([obsolete since version 2.0]({%slug changes-in-2-0-0%})) is removed. Use the icon names from the [Built-in Icons documentation]({%slug common-features-icons%}#icons-list).
 
 ## Component Changes
 
