--- a/upgrade/breaking-changes/4-0-0.md
+++ b/upgrade/breaking-changes/4-0-0.md
@@ -14,13 +14,13 @@ This section applies to changes to multiple components.
 
 ## Icons
 
-Some [built-in icons]({%slug general-information/font-icons%}#icons-list) have been renamed. See the full list of changes in article [New Icon Names in Telerik UI for Blazor 4.0]({%slug icon-kb-new-names%}).
+Some [built-in icons]({%slug common-features-icons%}#icons-list) have been renamed. See the full list of changes in article [New Icon Names in Telerik UI for Blazor 4.0]({%slug icon-kb-new-names%}).
 
 ### Icon
 
-The `Icon` parameter type changes from `string` to `object` to facilitate the addition of [Telerik Font and Svg Icons]({%slug general-information/font-icons%}).
+The `Icon` parameter type changes from `string` to `object` to facilitate the addition of [Telerik Font and Svg Icons]({%slug common-features-icons%}).
 
-To use built-in Telerik icons, [register the new icon namespaces]({%slug general-information/font-icons%}#how-icons-work) - `Telerik.FontIcons` and/or `Telerik.SvgIcons`.
+To use built-in Telerik icons, [register the new icon namespaces]({%slug common-features-icons%}#how-icons-work) - `Telerik.FontIcons` and/or `Telerik.SvgIcons`.
 
 To define custom icon classes inline, use `Icon="@( "my-icon-class" )"`.
 
