--- a/upgrade/rendering-changes/4-6-0.md
+++ b/upgrade/rendering-changes/4-6-0.md
@@ -17,7 +17,7 @@ position: 5
 
 ### Font Icons
 
-The font icon styles are detached from the component themes. Check section [Font Icon Stylesheet]({%slug general-information/font-icons%}#font-icon-stylesheet) or KB article [Font Icons do not render in Telerik UI for Blazor 4.6]({%slug icon-kb-font-icons-not-rendering%}) to see how to use font icons in your application after the 4.6.0 Telerik UI for Blazor release. 
+The font icon styles are detached from the component themes. Check section [Font Icon Stylesheet]({%slug common-features-icons%}#font-icon-stylesheet) or KB article [Font Icons do not render in Telerik UI for Blazor 4.6]({%slug icon-kb-font-icons-not-rendering%}) to see how to use font icons in your application after the 4.6.0 Telerik UI for Blazor release. 
 
 ### Changes in Icon Rendering
 
