docs(common): font-icon-related fixes

--- a/upgrade/breaking-changes/4-0-0.md
+++ b/upgrade/breaking-changes/4-0-0.md
@@ -24,6 +24,8 @@ To use built-in Telerik icons, [register the new icon namespaces]({%slug common-
 
 To define custom icon classes inline, use `Icon="@( "my-icon-class" )"`.
 
+To use Telerik font icons with UI for Blazor 4.6.0 and above, [register `font-icons.css`]({%slug common-features-icons%}#font-icon-stylesheet).
+
 <table>
     <thead><tr>
         <th>UI for Blazor 3.7.0</th>
@@ -33,22 +35,20 @@ To define custom icon classes inline, use `Icon="@( "my-icon-class" )"`.
         <tr>
             <td style="vertical-align:top">
 <pre><code>
-&lt;TelerikButton Icon="save"&gt; Font Icon Button &lt;TelerikButton /&gt;
+&lt;TelerikButton Icon="save"&gt; Font Icon Button &lt;/TelerikButton&gt;
 
-&lt;GridCommandButton Icon="save"&gt; Font Icon Command Button &lt;GridCommandButton /&gt;
+&lt;GridCommandButton Icon="save"&gt; Font Icon Command Button &lt;/GridCommandButton&gt;
 
-&lt;TelerikButton IconClass="fa fa-foo"&gt; Custom Icon Button &lt;TelerikButton /&gt;
+&lt;TelerikButton IconClass="fa fa-foo"&gt; Custom Icon Button &lt;/TelerikButton&gt;
 </code></pre>
             </td>
             <td style="vertical-align:top">
 <pre><code>
-<!-- below asset is necessary only if you use font icons -->
-<link href="https://unpkg.com/@@progress/kendo-font-icons@latest/dist/index.css" rel="stylesheet" type="text/css" />
-&lt;TelerikButton Icon="@SvgIcon.Save"&gt; Font Icon Button &lt;TelerikButton /&gt;
+&lt;TelerikButton Icon="@SvgIcon.Save"&gt; SVG Icon Button &lt;/TelerikButton&gt;
 
-&lt;GridCommandButton Icon="@SvgIcon.Save"&gt; Font Icon Command Button &lt;GridCommandButton /&gt;
+&lt;GridCommandButton Icon="@SvgIcon.Save"&gt; SVG Icon Command Button &lt;/GridCommandButton&gt;
 
-&lt;TelerikButton Icon="@( "fa fa-foo" )"&gt; Custom Icon Button &lt;TelerikButton /&gt;
+&lt;TelerikButton Icon="@( "fa fa-foo" )"&gt; Custom Icon Button &lt;/TelerikButton&gt;
 </code></pre>
             </td>
         </tr>
