--- a/upgrade/breaking-changes/5-0-0.md
+++ b/upgrade/breaking-changes/5-0-0.md
@@ -8,4 +8,4 @@ position: 1
 
 # Breaking Changes in 5.0.0
 
-Telerik UI for Blazor 5.0.0 targets .NET 6 and no longer supports .NET 3.1 and .NET 5. For more information, see [System Requirements]({%slug system-requirements%}).
+Telerik UI for Blazor 5.0.0 targets .NET 6 and no longer supports .NET Core 3.1 and .NET 5. For more information, see [System Requirements]({%slug system-requirements%}).
