--- a/upgrade/breaking-changes/2-0-0.md
+++ b/upgrade/breaking-changes/2-0-0.md
@@ -62,11 +62,11 @@ This is a list of the components that had methods removed and the new approach o
 
 ### Button
 
-* The `IsIconButton` property is removed. It was never supposed to be public and is set internaly by the component when it has no text.
+* The `IsIconButton` property is removed. It was never supposed to be public and is set internally by the component when it has no text.
 
 ### Calendar
 
-* The `Navigate()` method is no longer available in favor of two-way binding for the `View` and `Date` parameters. An example is avalable in the [Navigate]({%slug components/calendar/navigation%}#programmatic-navigation) article.
+* The `Navigate()` method is no longer available in favor of two-way binding for the `View` and `Date` parameters. An example is available in the [Navigate]({%slug components/calendar/navigation%}#programmatic-navigation) article.
 * The `View` and `Date` parameters should be used with two-way binding, especially when you handle `ValueChanged`. Otherwise, state changes (like selection) may revert them to the values set in the markup and move the user unexpectedly.
 
 ### DatePicker
@@ -78,7 +78,7 @@ This is a list of the components that had methods removed and the new approach o
 * The standalone icon component is now in the `Telerik.Blazor.Components.Common.Icon` namespace.
 * The `IconName` property is now `Icon`.
 * The `Class` property is now `IconClass`.
-* If you want to use the Telerik icons together with custom classes, you must ammend those classes instead of using the `Icon` property. For example, `<TelerikIcon IconClass="@("my-class k-icon k-i-" + IconName.File )" />`.
+* If you want to use the Telerik icons together with custom classes, you must amend those classes instead of using the `Icon` property. For example, `<TelerikIcon IconClass="@("my-class k-icon k-i-" + IconName.File )" />`.
 
 ### Grid
 
@@ -102,7 +102,7 @@ This is a list of the components that had methods removed and the new approach o
 
 ### TreeView
 
-* The `AddBinding()` and `RemoveBinding()` methods are no longer avaialble.
+* The `AddBinding()` and `RemoveBinding()` methods are no longer available.
 
 ### Window
 
