--- a/upgrade/breaking-changes/3-0-0.md
+++ b/upgrade/breaking-changes/3-0-0.md
@@ -346,7 +346,7 @@ async Task OnGridStateInit(GridStateEventArgs&lt;GridModel&gt; args)
 
 - **TileLayout** - introduced optional `Id` attribute for the `TileLayoutItem`. The `OnResize` event handler will receive argument of type `TileLayoutResizeEventArgs`. The `OnReorder` event handler will receive argument of type `TileLayoutReorderEventArgs`. Both event arguments will point to the tile item (`args.Id`) and define if the component should re-render after the event (`args.ShouldRender`).
 
->caption TileLayout resize and reoder events in UI for Blazor up to version 2.30 and after version 3.0
+>caption TileLayout resize and reorder events in UI for Blazor up to version 2.30 and after version 3.0
 
 <table>
     <thead><tr>
