--- a/upgrade/rendering-changes/3-6-0.md
+++ b/upgrade/rendering-changes/3-6-0.md
@@ -44,7 +44,7 @@ position: 2
 
 ## Dialog
 
-* Added `k-dialog-action` and `k-window-action` CSS classe to the [Action Buttons]({%slug dialog-action-buttons%})(`<button class="k-button">`).
+* Added `k-dialog-action` and `k-window-action` CSS classes to the [Action Buttons]({%slug dialog-action-buttons%})(`<button class="k-button">`).
 * Removed the `k-header` CSS class from the `<div class="k-dialog-titlebar">` element.
 
 ## Drawer
