--- a/upgrade/rendering-changes/4-3-0.md
+++ b/upgrade/rendering-changes/4-3-0.md
@@ -121,7 +121,7 @@ The 4.3.0 release brings about the following rendering changes for the Telerik U
 In an attempt to unify the look and feel of our components, the action buttons in all built-in dialogs now follow a common set of guidelines:
 
 * Action buttons are now rendered inside a dedicated footer `<div class="k-actions">` element.
-* The confirmation button always precedes the cancelation one, when such is present.
+* The confirmation button always precedes the cancellation one, when such is present.
 * When part of a non-resizable dialog, the action buttons are stretched. Such an example is the Filter or the Column Menu.
 
 Such dialogs are any edit forms, filter menus, column menus, editor's tools, as well as the TimePicker and DateTimePicker popups.
