docs(common): Document rendering changes for 5.2.0

--- a/upgrade/rendering-changes/5-2-0.md
+++ b/upgrade/rendering-changes/5-2-0.md
@@ -9,9 +9,14 @@ position: 6
 # Rendering Changes in 5.2.0
 
 * [ButtonGroup](#buttongroup)
+* [Calendar](#calendar)
 * [DropDownButton](#dropdownbutton-and-splitbutton)
+* [DateRangePicker](#daterangepicker)
+* [Drawer](#drawer)
+* [FloatingLabel](#floatinglabel)
 * [NumericTextBox](#numerictextbox)
 * [Pager](#pager)
+* [PanelBar](#panelbar)
 * [SplitButton](#dropdownbutton-and-splitbutton)
 * [Switch](#switch)
 
@@ -32,7 +37,7 @@ When a `ButtonGroupButton` inside a ButtonGroup has no `ChildContent`, it no lon
             <td style="vertical-align:top">
 <pre><code>
 &lt;button class="k-button"&gt;
-    &lt;span class="k-button-icon"&gt;&lt;/span&gt;
+    &lt;span class="k-button-icon"&gt;...&lt;/span&gt;
     <strong>&lt;span class="k-button-text"&gt;&lt;/span&gt;</strong>
 &lt;/button&gt;
 </code></pre>
@@ -50,9 +55,22 @@ When a `ButtonGroupButton` inside a ButtonGroup has no `ChildContent`, it no lon
 </table>
 
 
-## DropDownButton and SplitButton
+## Calendar
 
-The `ul.k-menu-group` element in the popup no longer renders `k-group` and `k-reset` CSS classes.
+* The `tbody` element in the year, decade and century views renders a `k-calendar-tbody` CSS class.
+* The `button.k-calendar-title` button for the month name in the month view renders a `k-button-primary` CSS class and has the theme's "primary" text color.
+* The `button.k-calendar-nav-today` element renders a `role="link"` attribute.
+
+
+## DateRangePicker
+
+The first and last table cell (`td.k-calendar-td`) in the selected range render `k-range-start` and `k-range-end` CSS classes.
+
+
+## Drawer
+
+* The Drawer items (`li.k-drawer-item`) render a `k-level-0` CSS class.
+* The `div.k-drawer-items` element is removed. The `k-drawer-items` CSS class is moved to the child `ul` element.
 
 <table>
     <thead>
@@ -65,14 +83,38 @@ The `ul.k-menu-group` element in the popup no longer renders `k-group` and `k-re
         <tr>
             <td style="vertical-align:top">
 <pre><code>
-&lt;ul class="k-group k-menu-group k-reset"&gt;
-&lt;/ul&gt;
+&lt;div class="k-drawer-container"&gt;
+    &lt;div class="k-drawer"&gt;
+        &lt;div class="k-drawer-wrapper"&gt;
+            <strong>&lt;div class="k-drawer-items"&gt;</strong>
+                &lt;ul&gt;
+                    &lt;li class="k-drawer-item"&gt;...&lt;/li&gt;
+                    &lt;li class="k-drawer-item"&gt;...&lt;/li&gt;
+                    &lt;li class="k-drawer-item"&gt;...&lt;/li&gt;
+                &lt;/ul&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class="k-drawer-content"&gt;...&lt;/div&gt;
+&lt;/div&gt;
 </code></pre>
             </td>
             <td style="vertical-align:top">
 <pre><code>
-&lt;ul class="k-menu-group"&gt;
-&lt;/ul&gt;
+&lt;div class="k-drawer-container"&gt;
+    &lt;div class="k-drawer"&gt;
+        &lt;div class="k-drawer-wrapper"&gt;
+
+            &lt;ul <strong>class="k-drawer-items"</strong>&gt;
+                &lt;li class="k-drawer-item <strong>k-level-0</strong>"&gt;...&lt;/li&gt;
+                &lt;li class="k-drawer-item k-level-0"&gt;...&lt;/li&gt;
+                &lt;li class="k-drawer-item k-level-0"&gt;...&lt;/li&gt;
+            &lt;/ul&gt;
+
+        &lt;/div&gt;
+    &lt;/div&gt;
+    &lt;div class="k-drawer-content"&gt;...&lt;/div&gt;
+&lt;/div&gt;
 </code></pre>
             </td>
         </tr>
@@ -80,9 +122,19 @@ The `ul.k-menu-group` element in the popup no longer renders `k-group` and `k-re
 </table>
 
 
+## DropDownButton and SplitButton
+
+The `ul.k-menu-group` element in the popup no longer renders `k-group` and `k-reset` CSS classes.
+
+
+## FloatingLabel
+
+The `label.k-label` element renders as `label.k-floating-label`.
+
+
 ## NumericTextBox
 
-The arrow buttons (`button.k-spinner-increase` and `button.k-spinner-decrease`) render an additional CSS class that reflects the [NumericTextBox `Size`]({%slug numerictextbox-appearance%}#size).
+The arrow buttons (`button.k-spinner-increase` and `button.k-spinner-decrease`) render an additional CSS class that reflects the [NumericTextBox `Size`]({%slug numerictextbox-appearance%}#size). The default `Size` is medium, so the new CSS class is `k-button-md`.
 
 <table>
     <thead>
@@ -120,7 +172,7 @@ The arrow buttons (`button.k-spinner-increase` and `button.k-spinner-decrease`) 
 
 ## Pager
 
-The page number buttons render their content in a `span.k-button-text`:
+The page number buttons (`button.k-button`) render their content in a `span.k-button-text`:
 
 <table>
     <thead>
@@ -156,34 +208,16 @@ The page number buttons render their content in a `span.k-button-text`:
 </table>
 
 
+# PanelBar
+
+* Expanded items (`li.k-panelbar-item`) render a `k-expanded` CSS class instead of `k-state-expanded`.
+* Child item groups (`ul.k-panelbar-group`) no longer render `k-group` and `k-panel` CSS classes.
+* The [`<ContentTemplate>` wrapper]({%slug panelbar-templates-content%}) (`div.k-panelbar-content`) no longer renders a `k-content` CSS class.
+
+
 ## Switch
 
 The `span.k-switch` element no longer renders a `k-rounded-full` CSS class.
-
-<table>
-    <thead>
-        <tr>
-            <th>UI for Blazor 5.1.1</th>
-            <th>UI for Blazor 5.2.0</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;span class="k-switch <strong>k-rounded-full</strong>"&gt;
-&lt;/span&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;span class="k-switch"&gt;
-&lt;/span&gt;
-</code></pre>
-            </td>
-        </tr>
-    </tbody>
-</table>
 
 
 ## See Also
