docs: rendering changes 5.2.0 continued

--- a/upgrade/rendering-changes/5-2-0.md
+++ b/upgrade/rendering-changes/5-2-0.md
@@ -14,11 +14,14 @@ position: 6
 * [DateRangePicker](#daterangepicker)
 * [Drawer](#drawer)
 * [FloatingLabel](#floatinglabel)
+* [Grid](#grid)
 * [NumericTextBox](#numerictextbox)
 * [Pager](#pager)
 * [PanelBar](#panelbar)
 * [SplitButton](#dropdownbutton-and-splitbutton)
+* [Scheduler](#scheduler)
 * [Switch](#switch)
+* [TreeList](#treelist)
 
 
 ## ButtonGroup
@@ -132,47 +135,20 @@ The `ul.k-menu-group` element in the popup no longer renders `k-group` and `k-re
 The `label.k-label` element renders as `label.k-floating-label`.
 
 
+## Grid
+
+The data rows (`tr.k-table-row`) render a `.k-master-row` CSS class only in hierarchy scenarios when the Grid has a `<DetailTemplate>`.
+
+
 ## NumericTextBox
 
 The arrow buttons (`button.k-spinner-increase` and `button.k-spinner-decrease`) render an additional CSS class that reflects the [NumericTextBox `Size`]({%slug numerictextbox-appearance%}#size). The default `Size` is medium, so the new CSS class is `k-button-md`.
 
-<table>
-    <thead>
-        <tr>
-            <th>UI for Blazor 5.1.1</th>
-            <th>UI for Blazor 5.2.0</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;button class="k-spinner-increase"&gt;
-    &lt;span class="k-button-icon"&gt;&lt;/span&gt;
-&lt;/button&gt;
-&lt;button class="k-spinner-decrease"&gt;
-    &lt;span class="k-button-icon"&gt;&lt;/span&gt;
-&lt;/button&gt;
-</code></pre>
-            </td>
-            <td style="vertical-align:top">
-<pre><code>
-&lt;button class="k-spinner-increase <strong>k-button-md</strong>"&gt;
-    &lt;span class="k-button-icon"&gt;&lt;/span&gt;
-&lt;/button&gt;
-&lt;button class="k-spinner-decrease <strong>k-button-md</strong>"&gt;
-    &lt;span class="k-button-icon"&gt;&lt;/span&gt;
-&lt;/button&gt;
-</code></pre>
-            </td>
-        </tr>
-    </tbody>
-</table>
-
 
 ## Pager
 
-The page number buttons (`button.k-button`) render their content in a `span.k-button-text`:
+* The selected `option` element in the native page number drop down (`select.k-picker`) no longer renders a `k-selected` CSS class. The `select` element shows on small screens instead of the pager buttons when the [Pager `Adaptive` parameter]({%slug pager-overview%}#pager-parameters) is set to `true`.
+* The page number buttons (`button.k-button`) render their content in a `span.k-button-text`.
 
 <table>
     <thead>
@@ -208,16 +184,26 @@ The page number buttons (`button.k-button`) render their content in a `span.k-bu
 </table>
 
 
-# PanelBar
+## PanelBar
 
 * Expanded items (`li.k-panelbar-item`) render a `k-expanded` CSS class instead of `k-state-expanded`.
 * Child item groups (`ul.k-panelbar-group`) no longer render `k-group` and `k-panel` CSS classes.
 * The [`<ContentTemplate>` wrapper]({%slug panelbar-templates-content%}) (`div.k-panelbar-content`) no longer renders a `k-content` CSS class.
 
 
+## Scheduler
+
+* The Scheduler `div.k-scheduler-layout` element renders a `k-scheduler-dayview` or `k-scheduler-weekview` CSS class when the component shows its Day view or Week view, respectively.
+
+
 ## Switch
 
 The `span.k-switch` element no longer renders a `k-rounded-full` CSS class.
+
+
+## TreeList
+
+The data rows (`tr.k-table-row`) render a `.k-master-row` CSS class only if they are expandable.
 
 
 ## See Also
