--- a/upgrade/rendering-changes/5-2-0.md
+++ b/upgrade/rendering-changes/5-2-0.md
@@ -60,7 +60,7 @@ When a `ButtonGroupButton` inside a ButtonGroup has no `ChildContent`, it no lon
 
 ## Calendar
 
-* The `tbody` element in the year, decade and century views renders a `k-calendar-tbody` CSS class.
+* The `tbody` element in the year, decade, and century view renders a `k-calendar-tbody` CSS class.
 * The `button.k-calendar-title` button for the month name in the month view renders a `k-button-primary` CSS class and has the theme's "primary" text color.
 * The `button.k-calendar-nav-today` element renders a `role="link"` attribute.
 
