--- a/upgrade/rendering-changes/5-2-0.md
+++ b/upgrade/rendering-changes/5-2-0.md
@@ -8,18 +8,35 @@ position: 975
 
 # Rendering Changes in 5.2.0
 
+* [Breadcrumb](#breadcrumb)
 * [ButtonGroup](#buttongroup)
 * [Calendar](#calendar)
+* [Chip](#chip)
 * [DropDownButton](#dropdownbutton-and-splitbutton)
 * [DateRangePicker](#daterangepicker)
 * [Drawer](#drawer)
+* [DropZone](#dropzone)
+* [Editor](#editor)
+* [FileManager](#filemanager)
 * [FloatingLabel](#floatinglabel)
+* [ListView](#listview)
+* [Notification](#notification)
 * [NumericTextBox](#numerictextbox)
 * [Pager](#pager)
 * [PanelBar](#panelbar)
+* [ProgressBar](#progressbar)
 * [SplitButton](#dropdownbutton-and-splitbutton)
 * [Scheduler](#scheduler)
+* [Stepper and Wizard](#stepper-and-wizard)
 * [Switch](#switch)
+* [TileLayout](#tilelayout)
+* [TreeView](#treeview)
+* [Upload](#upload)
+
+
+## Breadcrumb
+
+The `span.k-breadcrumb-item-text` element renders only if the Breadcrumb item has text.
 
 
 ## ButtonGroup
@@ -61,6 +78,12 @@ When a `ButtonGroupButton` inside a ButtonGroup has no `ChildContent`, it no lon
 * The `tbody` element in the year, decade, and century view renders a `k-calendar-tbody` CSS class.
 * The `button.k-calendar-title` button for the month name in the month view renders a `k-button-primary` CSS class and has the theme's "primary" text color.
 * The `button.k-calendar-nav-today` element renders a `role="link"` attribute.
+
+
+## Chip
+
+* The `span.k-chip-label` element no longer renders a `k-text-ellipsis` CSS class.
+* The built-in icon container (`span.k-icon`) no longer renders a `k-chip-icon` CSS class.
 
 
 ## DateRangePicker
@@ -128,9 +151,43 @@ The first and last table cell (`td.k-calendar-td`) in the selected range render 
 The `ul.k-menu-group` element in the popup no longer renders `k-group` and `k-reset` CSS classes.
 
 
+## DropZone
+
+* The `span.k-icon` child of `div.k-dropzone-inner` renders a `k-dropzone-icon` CSS class.
+* The DropZone hint and note elements (`span.k-dropzone-hint` and `span.k-dropzone-note`) no longer render when [`HintText` and `NoteText`]({%slug dropzone-overview%}#parameters) are empty.
+
+
+## Editor
+
+* Editor toolbar buttons (`button.k-button`) that are inside a ButtonGroup no longer render `k-toolbar-button` and `k-toolbar-toggle-button` CSS classes.
+
+
+## FileManager
+
+* The Splitter component (`div.k-splitter`) renders a `k-filemanager-splitter` CSS class.
+* The content pane (`div.k-pane.k-filemanager-content`) renders a `k-scrollable` CSS class.
+* The TreeView parent (`div.k-filemanager-navigation-container`) no longer renders.
+* The ListView component (`div.k-listview.k-filemanager-listview`) renders a `k-selectable` CSS class.
+* The ListView parent (`div.k-filemanager-view.k-filemanager-view-list`) no longer renders.
+* The `div.k-file-preview` element in the Details pane renders as a `span.k-file-preview`.
+* The `div.k-file-name` element in the Details pane no longer renders a `k-user-select-none` CSS class.
+* The SplitButton (`span.k-split-button`) in the toolbar renders a `k-toolbar-split-button` CSS class.
+* The `div.k-filemanager-search-tool` element and its child `span.k-searchbox` are merged into one element `div.k-filemanager-search-tool k-searchbox`, which no longer renders a `k-toolbar-last-visible` CSS class.
+
+
 ## FloatingLabel
 
 The `label.k-label` element renders as `label.k-floating-label`.
+
+
+## ListView
+
+* The ListView container (`div.k-listview`) no longer renders a `k-d-flex` CSS class.
+
+
+## Notification
+
+The optional `span.k-icon` element renders a `k-notification-status` CSS class.
 
 
 ## NumericTextBox
@@ -182,6 +239,12 @@ The arrow buttons (`button.k-spinner-increase` and `button.k-spinner-decrease`) 
 * Expanded items (`li.k-panelbar-item`) render a `k-expanded` CSS class instead of `k-state-expanded`.
 * Child item groups (`ul.k-panelbar-group`) no longer render `k-group` and `k-panel` CSS classes.
 * The [`<ContentTemplate>` wrapper]({%slug panelbar-templates-content%}) (`div.k-panelbar-content`) no longer renders a `k-content` CSS class.
+* The `li.k-panelbar-item` element renders a `k-panelbar-header` CSS class only when it is a root PanelBar item.
+
+
+## ProgressBar
+
+The two `span.k-progress-status` elements no longer render if the [ProgressBar label]({%slug progressbar-label%}) is not visible.
 
 
 ## Scheduler
@@ -189,9 +252,90 @@ The arrow buttons (`button.k-spinner-increase` and `button.k-spinner-decrease`) 
 * The Scheduler `div.k-scheduler-layout` element renders a `k-scheduler-dayview` or `k-scheduler-weekview` CSS class when the component shows its Day view or Week view, respectively.
 
 
+## Stepper and Wizard
+
+* The `span.k-step-label` element does not render if the respective [step as no `Label`]({%slug stepper-labels%}).
+* The `span.k-step` element renders a `k-step-optional` CSS class when the [step is optional]({%slug wizard-structure-stepper%}).
+
+
 ## Switch
 
 The `span.k-switch` element no longer renders a `k-rounded-full` CSS class.
+
+
+## TileLayout
+
+* The TileLayout item header (`div.k-tilelayout-item-header`) renders a `k-cursor-move` CSS class instead of `k-cursor-grab` and `k-cursor-grabbing`.
+* The header title (`h5.k-card-title`) renders as a `div.k-card-title` element.
+* THe TileLayout item body (`div.k-tilelayout-item-body`) no longer renders a `k-overflow-hidden` CSS class.
+
+
+## TreeView
+
+The child `div` of the TreeView item container (`li.k-treeview-item > div`) renders as a `span` element.
+
+
+## Upload
+
+* The Upload container (`div.k-upload`) renders a `k-upload-empty` CSS class when the file list is empty.
+* The progress bar (`div.k-progressbar`) inside each file item (`li.k-file`) always renders, but has a `k-hidden` CSS class when not visible.
+* The file icon (`span.k-icon`) inside each file item renders a `k-file-icon` CSS class instead of `k-file-group`.
+* The `span.k-file-info` element renders as a `div`.
+* The `span.k-upload-status` element in the file list is replaced by `div.k-upload-actions`.
+* The `button.k-button` elements in the file list render `k-button-md` and `k-rounded-md` CSS classes.
+* The remove icons (`span.k-icon`) in the file list no longer render a `k-delete` CSS class.
+* The `span.k-upload-status` element in the top area contains only the upload status label and no longer wraps the Loader component and the status icon.
+
+<table>
+    <thead>
+        <tr>
+            <th>UI for Blazor 5.1.1</th>
+            <th>UI for Blazor 5.2.0</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="vertical-align:top">
+<pre><code>
+&lt;div class="k-upload"&gt;
+    &lt;div class="k-upload-dropzone k-dropzone"&gt;
+        &lt;div class="k-upload-button-wrap"&gt;
+            ...
+        &lt;/div&gt;
+        &lt;span class="k-dropzone-hint"&gt;Drag and drop files here to upload&lt;/span&gt;
+        <strong>&lt;span class="k-upload-status"&gt;</strong>
+            &lt;span class="k-icon"&gt;
+                ...
+            &lt;/span&gt;
+
+            Done
+        &lt;/span&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+</code></pre>
+            </td>
+            <td style="vertical-align:top">
+<pre><code>
+&lt;div class="k-upload"&gt;
+    &lt;div class="k-upload-dropzone k-dropzone"&gt;
+        &lt;div class="k-upload-button-wrap"&gt;
+            ...
+        &lt;/div&gt;
+        &lt;span class="k-dropzone-hint"&gt;Drag and drop files here to upload&lt;/span&gt;
+
+        &lt;span class="k-icon"&gt;
+            ...
+        &lt;/span&gt;
+        <strong>&lt;span class="k-upload-status"&gt;</strong>
+            Done
+        &lt;/span&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+</code></pre>
+            </td>
+        </tr>
+    </tbody>
+</table>
 
 
 ## See Also
