rendering changes continued

--- a/upgrade/rendering-changes/5-2-0.md
+++ b/upgrade/rendering-changes/5-2-0.md
@@ -19,12 +19,15 @@ position: 975
 * [Editor](#editor)
 * [FileManager](#filemanager)
 * [FloatingLabel](#floatinglabel)
+* [Grid and TreeList](#grid-and-treelist)
 * [ListView](#listview)
+* [MultiColumnComboBox](#multicolumncombobox)
 * [Notification](#notification)
 * [NumericTextBox](#numerictextbox)
 * [Pager](#pager)
 * [PanelBar](#panelbar)
 * [ProgressBar](#progressbar)
+* [RadioGroup](#radiogroup)
 * [SplitButton](#dropdownbutton-and-splitbutton)
 * [Scheduler](#scheduler)
 * [Stepper and Wizard](#stepper-and-wizard)
@@ -88,7 +91,8 @@ When a `ButtonGroupButton` inside a ButtonGroup has no `ChildContent`, it no lon
 
 ## DateRangePicker
 
-The first and last table cell (`td.k-calendar-td`) in the selected range render `k-range-start` and `k-range-end` CSS classes.
+* The first and last table cell (`td.k-calendar-td`) in the selected range render `k-range-start` and `k-range-end` CSS classes.
+* The `div.k-popup` element renders a `k-calendar-container` CSS class.
 
 
 ## Drawer
@@ -159,7 +163,7 @@ The `ul.k-menu-group` element in the popup no longer renders `k-group` and `k-re
 
 ## Editor
 
-* Editor toolbar buttons (`button.k-button`) that are inside a ButtonGroup no longer render `k-toolbar-button` and `k-toolbar-toggle-button` CSS classes.
+Editor toolbar buttons (`button.k-button`) that are inside a ButtonGroup no longer render `k-toolbar-button` and `k-toolbar-toggle-button` CSS classes.
 
 
 ## FileManager
@@ -180,9 +184,138 @@ The `ul.k-menu-group` element in the popup no longer renders `k-group` and `k-re
 The `label.k-label` element renders as `label.k-floating-label`.
 
 
+## Grid and TreeList
+
+The changes below apply to the TreeList only when the two components have the same feature.
+
+* The row dragging handle container (`td.k-drag-cell`) renders a `k-table-td` CSS class.
+* A master table row (`tr.k-table-row`) renders a `k-expanded` CSS class when it is expanded in a hierarchy scenario.
+* The first empty cell in a grouped row (`td.k-group-cell`) renders a `k-table-group-td` CSS class.
+* The group expand/collapse icon (`span.k-icon`) no longer renders a `k-cursor-pointer` CSS class.
+* The And/Or filter operator drop down (`span.k-dropdownlist`) renders a `k-filter-and` or `k-filter-or` CSS class.
+* The filter menu container (`div.k-filter-menu`) no longer renders `k-group` and `k-reset` CSS classes.
+
+### Filtering CheckBoxList
+
+* The filtering checkbox list (`ul.k-multicheck-wrap`) no longer renders a `k-reset` CSS class.
+* The filtering checkbox (`input.k-checkbox`) is wrapped in the `label.k-checkbox-label` element, which used to come after it in older versions.
+* The **Select All** filtering checkbox container (`li.k-item`) renders a `k-check-all-wrap` CSS class.
+* The filtering checkbox list item (`li.k-item`) no longer renders a `span.k-state-default` element.
+
+<table>
+    <thead>
+        <tr>
+            <th>UI for Blazor 5.1.1</th>
+            <th>UI for Blazor 5.2.0</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="vertical-align:top">
+<pre><code>
+&lt;ul class="<strong>k-reset</strong> k-multicheck-wrap"&gt;
+    &lt;li class="k-item"&gt;
+        <strong>&lt;span class="k-state-default"&gt;</strong>
+            &lt;span class="k-checkbox-wrap"&gt;
+                &lt;input type="checkbox" class="k-checkbox" /&gt;
+            &lt;/span&gt;
+            <strong>&lt;label class="k-checkbox-label"&gt;Select All&lt;/label&gt;</strong>
+        <strong>&lt;/span&gt;</strong>
+    &lt;/li&gt;
+    &lt;li class="k-item"&gt;
+        <strong>&lt;span class="k-state-default"&gt;</strong>
+            &lt;span class="k-checkbox-wrap"&gt;
+                &lt;input type="checkbox" class="k-checkbox" /&gt;
+            &lt;/span&gt;
+            <strong>&lt;label class="k-checkbox-label"&gt;Text&lt;/label&gt;</strong>
+        &lt;/span&gt;
+    &lt;/li&gt;
+&lt;/ul&gt;
+</code></pre>
+            </td>
+            <td style="vertical-align:top">
+<pre><code>
+&lt;ul class="k-multicheck-wrap"&gt;
+    &lt;li class="k-item <strong>k-check-all-wrap</strong>"&gt;
+        <strong>&lt;label class="k-checkbox-label"&gt;</strong>
+            &lt;span class="k-checkbox-wrap"&gt;
+                &lt;input type="checkbox" class="k-checkbox" /&gt;
+            &lt;/span&gt;
+            Select All
+        <strong>&lt;/label&gt;</strong>
+    &lt;/li&gt;
+    &lt;li class="k-item"&gt;
+        <strong>&lt;label class="k-checkbox-label"&gt;</strong>
+            &lt;span class="k-checkbox-wrap"&gt;
+                &lt;input type="checkbox" class="k-checkbox" /&gt;
+            &lt;/span&gt;
+            Text
+        <strong>&lt;/label&gt;</strong>
+    &lt;/li&gt;
+&lt;/ul&gt;
+</code></pre>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+
 ## ListView
 
-* The ListView container (`div.k-listview`) no longer renders a `k-d-flex` CSS class.
+The ListView container (`div.k-listview`) no longer renders a `k-d-flex` CSS class.
+
+
+## LoaderContainer
+
+The `Text` container (`div.k-loader-container-label`) prepends a `!` to its `ThemeColor` CSS class. This means that the theme color is applied with an `!important` keyword, so you also need to use `!important` to [override]({%slug themes-override%}) it.
+
+
+## MultiColumnComboBox
+
+The `FooterTemplate` container (`div.k-table-footer`) renders a single `span.k-table-td` element instead of a `table.k-table`.
+
+<table>
+    <thead>
+        <tr>
+            <th>UI for Blazor 5.1.1</th>
+            <th>UI for Blazor 5.2.0</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="vertical-align:top">
+<pre><code>
+&lt;div class="k-table-footer"&gt;
+    &lt;table class="k-table"&gt;
+        &lt;tfoot class="k-table-tfoot"&gt;
+            &lt;tr class="k-table-row"&gt;
+                <strong>&lt;td</strong> class="k-table-td"&gt;
+                    FooterTemplate content
+                <strong>&lt;/td&gt;</strong>
+            &lt;/tr&gt;
+        &lt;/tfoot&gt;
+    &lt;/table&gt;
+&lt;/div&gt;
+</code></pre>
+            </td>
+            <td style="vertical-align:top">
+<pre><code>
+&lt;div class="k-table-footer"&gt;
+
+
+
+    <strong>&lt;span</strong> class="k-table-td"&gt;
+        FooterTemplate content
+    <strong>&lt;/span&gt;</strong>
+
+
+
+&lt;/div&gt;
+</code></pre>
+            </td>
+        </tr>
+    </tbody>
+</table>
 
 
 ## Notification
@@ -247,9 +380,53 @@ The arrow buttons (`button.k-spinner-increase` and `button.k-spinner-decrease`) 
 The two `span.k-progress-status` elements no longer render if the [ProgressBar label]({%slug progressbar-label%}) is not visible.
 
 
+## RadioGroup
+
+* The item container (`li.k-radio-item`) renders as `li.k-radio-list-item`.
+* The radio button element (`input.k-radio`) renders a `k-checked` CSS class when checked.
+* The `input.k-radio` element is wrapped in a `span.k-radio-wrap`.
+
+<table>
+    <thead>
+        <tr>
+            <th>UI for Blazor 5.1.1</th>
+            <th>UI for Blazor 5.2.0</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="vertical-align:top">
+<pre><code>
+&lt;li <strong>class="k-radio-item"</strong>&gt;
+
+    &lt;input type="radio" class="k-radio" /&gt;
+
+    &lt;label class="k-radio-label"&gt;
+        RadioGroup item label
+    &lt;/label&gt;
+&lt;/li&gt;
+</code></pre>
+            </td>
+            <td style="vertical-align:top">
+<pre><code>
+&lt;li <strong>class="k-radio-list-item"</strong>&gt;
+    <strong>&lt;span class="k-radio-wrap"&gt;</strong>
+        &lt;input type="radio" class="k-radio <strong>k-checked</strong>" /&gt;
+    <strong>&lt;/span&gt;</strong>
+    &lt;label class="k-radio-label"&gt;
+        RadioGroup item label
+    &lt;/label&gt;
+&lt;/li&gt;
+</code></pre>
+            </td>
+        </tr>
+    </tbody>
+</table>
+
+
 ## Scheduler
 
-* The Scheduler `div.k-scheduler-layout` element renders a `k-scheduler-dayview` or `k-scheduler-weekview` CSS class when the component shows its Day view or Week view, respectively.
+The Scheduler `div.k-scheduler-layout` element renders a `k-scheduler-dayview` or `k-scheduler-weekview` CSS class when the component shows its Day view or Week view, respectively.
 
 
 ## Stepper and Wizard
