docs(common): Finalize rendering changes for 5.2.0

--- a/upgrade/rendering-changes/5-2-0.md
+++ b/upgrade/rendering-changes/5-2-0.md
@@ -18,6 +18,7 @@ position: 975
 * [DropZone](#dropzone)
 * [Editor](#editor)
 * [FileManager](#filemanager)
+* [FileSelect](#fileselect)
 * [FloatingLabel](#floatinglabel)
 * [Grid and TreeList](#grid-and-treelist)
 * [ListView](#listview)
@@ -26,6 +27,7 @@ position: 975
 * [NumericTextBox](#numerictextbox)
 * [Pager](#pager)
 * [PanelBar](#panelbar)
+* [PdfViewer](#pdfviewer)
 * [ProgressBar](#progressbar)
 * [RadioGroup](#radiogroup)
 * [SplitButton](#dropdownbutton-and-splitbutton)
@@ -179,6 +181,14 @@ Editor toolbar buttons (`button.k-button`) that are inside a ButtonGroup no long
 * The `div.k-filemanager-search-tool` element and its child `span.k-searchbox` are merged into one element `div.k-filemanager-search-tool k-searchbox`, which no longer renders a `k-toolbar-last-visible` CSS class.
 
 
+## FileSelect
+
+The HTML rendering of the FileSelect and Upload components is almost identical. This section includes changes that are specific to the FileSelect. For more changes, refer to the [Upload section](#upload) below.
+
+* The component container (`div.k-upload`) no longer renders a `k-header` CSS class.
+* The `div.k-upload` element renders a `k-upload-async` CSS class.
+
+
 ## FloatingLabel
 
 The `label.k-label` element renders as `label.k-floating-label`.
@@ -330,6 +340,9 @@ The arrow buttons (`button.k-spinner-increase` and `button.k-spinner-decrease`) 
 
 ## Pager
 
+The rendering changes in the Pager also affect the components that use a Pager component internally, such as the Grid, ListView, and the TreeList.
+
+* When the `InputType` is `PagerInputType.Input`, the **Page** and **of XX** labels inside `span.k-pager-input` are rendered inside `span`s.
 * The selected `option` element in the native page number drop down (`select.k-picker`) no longer renders a `k-selected` CSS class. The `select` element shows on small screens instead of the pager buttons when the [Pager `Adaptive` parameter]({%slug pager-overview%}#pager-parameters) is set to `true`.
 * The page number buttons (`button.k-button`) render their content in a `span.k-button-text`.
 
@@ -373,6 +386,60 @@ The arrow buttons (`button.k-spinner-increase` and `button.k-spinner-decrease`) 
 * Child item groups (`ul.k-panelbar-group`) no longer render `k-group` and `k-panel` CSS classes.
 * The [`<ContentTemplate>` wrapper]({%slug panelbar-templates-content%}) (`div.k-panelbar-content`) no longer renders a `k-content` CSS class.
 * The `li.k-panelbar-item` element renders a `k-panelbar-header` CSS class only when it is a root PanelBar item.
+
+
+## PdfViewer
+
+* The PDF document container (`div.k-canvas`) renders a `k-enable-text-select` CSS class.
+* The **Zoom** toolbar button group (`div.k-button-group`) render `k-toolbar-button-group` and `k-button-group-solid` CSS classes.
+* The **Zoom Out** and **Zoom In** toolbar buttons (`button.k-button`) no longer render a `k-toolbar-button` CSS class.
+* The **Zoom In** button no longer renders a `k-group-start` CSS class.
+* The **Zoom** drop down renders a `k-toolbar-combobox` CSS class.
+* All toolbar buttons (`button.k-button.k-button-solid.k-button-solid-base`) apply flat [Button `FillMode`]({%slug button-appearance%}#fillmode) and render as `button.k-button.k-button-flat.k-button-flat-base`.
+* The **Folder Open** icon (`span.k-icon.k-svg-icon.k-svg-i-folder-open`) in an empty PDF Viewer renders as an [**Upload** icon (`span.k-icon.k-svg-icon.k-svg-i-upload`)](https://www.telerik.com/design-system/docs/foundation/iconography/icon-list/) with a `k-dropzone-icon` CSS class. If using font icons, then `span.k-icon.k-font-icon.k-i-folder-open` renders as `span.k-icon.k-font-icon.k-i-upload`.
+* The **Upload** icon is followed by a `span.k-dropzone-hint` element.
+* The **Upload** icon and drop zone hint render inside a `div.k-external-dropzone` element, which wraps a `div.k-dropzone-hint` element.
+
+<table>
+    <thead>
+        <tr>
+            <th>UI for Blazor 5.1.1</th>
+            <th>UI for Blazor 5.2.0</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="vertical-align:top">
+<pre><code>
+
+
+&lt;span class="k-icon <strong>k-svg-i-folder-open</strong>"&gt;
+    ...
+&lt;/span&gt;
+
+
+
+
+
+</code></pre>
+            </td>
+            <td style="vertical-align:top">
+<pre><code>
+&lt;div class="k-external-dropzone"&gt;
+    &lt;div class="k-dropzone-inner"&gt;
+        &lt;span class="k-icon <strong>k-svg-i-upload k-dropzone-icon</strong>"&gt;
+            ...
+        &lt;/span&gt;
+        &lt;span class="k-dropzone-hint"&gt;
+            ...
+        &lt;/span&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+</code></pre>
+            </td>
+        </tr>
+    </tbody>
+</table>
 
 
 ## ProgressBar
