--- a/upgrade/rendering-changes/5-2-0.md
+++ b/upgrade/rendering-changes/5-2-0.md
@@ -390,7 +390,7 @@ The rendering changes in the Pager also affect the components that use a Pager c
 
 ## PdfViewer
 
-* The PDF document container (`div.k-canvas`) renders a `k-enable-text-select` CSS class.
+* The PDF document container (`div.k-canvas`) renders a `k-enable-text-selection` or `k-enable-panning` CSS class, depending on the current component state and the user. By default, the PDF Viewer is in text selection mode.
 * The **Zoom** toolbar button group (`div.k-button-group`) render `k-toolbar-button-group` and `k-button-group-flat` CSS classes.
 * The **Zoom Out** and **Zoom In** toolbar buttons (`button.k-button`) no longer render a `k-toolbar-button` CSS class.
 * The **Zoom In** button no longer renders a `k-group-start` CSS class.
