docs(loadercontainer): Document z-index change in 6.0

--- a/upgrade/rendering-changes/6-0-0.md
+++ b/upgrade/rendering-changes/6-0-0.md
@@ -22,6 +22,7 @@ position: 975
 * [FloatingLabel](#floatinglabel)
 * [Grid and TreeList](#grid-and-treelist)
 * [ListView](#listview)
+* [LoaderContainer](#loadercontainer)
 * [MultiColumnComboBox](#multicolumncombobox)
 * [Notification](#notification)
 * [NumericTextBox](#numerictextbox)
@@ -277,7 +278,8 @@ The ListView container (`div.k-listview`) no longer renders a `k-d-flex` CSS cla
 
 ## LoaderContainer
 
-The `Text` container (`div.k-loader-container-label`) prepends a `!` to its `ThemeColor` CSS class. This means that the theme color is applied with an `!important` keyword, so you also need to use `!important` to [override]({%slug themes-override%}) it.
+* The `Text` container (`div.k-loader-container-label`) prepends a `!` to its `ThemeColor` CSS class. This means that the theme color is applied with an `!important` keyword, so you also need to use `!important` to [override]({%slug themes-override%}) it.
+* The `z-index` value of `div.k-loader-container` is `20001`, compared to `2001` in older versions. As a result, the LoaderContaier will show on top of popup Windows and Dialogs. If necessary, show the LoaderContainer after closing the popup.
 
 
 ## MultiColumnComboBox
