docs(TileLayout): rendering changes typo

--- a/upgrade/rendering-changes/6-0-0.md
+++ b/upgrade/rendering-changes/6-0-0.md
@@ -513,7 +513,7 @@ The `span.k-switch` element no longer renders a `k-rounded-full` CSS class.
 
 * The TileLayout item header (`div.k-tilelayout-item-header`) renders a `k-cursor-move` CSS class instead of `k-cursor-grab` and `k-cursor-grabbing`.
 * The header title (`h5.k-card-title`) renders as a `div.k-card-title` element.
-* THe TileLayout item body (`div.k-tilelayout-item-body`) no longer renders a `k-overflow-hidden` CSS class.
+* The TileLayout item body (`div.k-tilelayout-item-body`) no longer renders a `k-overflow-hidden` CSS class.
 
 
 ## TreeView
