docs(common): Themes revamp continued

--- a/upgrade/rendering-changes/3-6-0.md
+++ b/upgrade/rendering-changes/3-6-0.md
@@ -99,4 +99,4 @@ position: 995
 
 ## See also
 
-* [Good styling practices]({%slug good-styling-practices%})
+* [Use best practives when overriding theme styles]({%slug themes-override%}#best-practices)
