--- a/upgrade/rendering-changes/4-0-0.md
+++ b/upgrade/rendering-changes/4-0-0.md
@@ -237,3 +237,8 @@ The following changes are applicable when `AutoUpload = "false"`, so the **Clear
 * Removed the `k-dialog-titlebar` and `k-header` classes from `<div class="k-window-titlebar>`.
 * Renamed `k-window-actions` to `k-window-titlebar-actions`.
 * Renamed `k-window-action` to `k-window-titlebar-action`.
+
+
+## See Also
+
+* [Use best practives when overriding theme styles]({%slug themes-override%}#best-practices)
