--- a/upgrade/rendering-changes/4-3-0.md
+++ b/upgrade/rendering-changes/4-3-0.md
@@ -128,4 +128,4 @@ Such dialogs are any edit forms, filter menus, column menus, editor's tools, as 
 
 ## See Also
 
-* [Best Practices for Styling Telerik UI for Blazor Components]({%slug good-styling-practices%})
+* [Use best practives when overriding theme styles]({%slug themes-override%}#best-practices)
