--- a/upgrade/rendering-changes/4-6-0.md
+++ b/upgrade/rendering-changes/4-6-0.md
@@ -65,7 +65,6 @@ The CSS classes applied to the built-in Font and SVG icons will be unified to in
 * Replaced the `<label class="k-label k-form-label k-label-empty"></label>` element with `<span class="k-label k-form-label k-label-empty"></span>` when the `<FormItem LabelText=""></FormItem>`.
 
 
-
 ## See Also
 
-* [Best Practices for Styling Telerik UI for Blazor Components]({%slug good-styling-practices%})
+* [Use best practives when overriding theme styles]({%slug themes-override%}#best-practices)
