--- a/upgrade/rendering-changes/3-4-0.md
+++ b/upgrade/rendering-changes/3-4-0.md
@@ -33,4 +33,5 @@ Previous to the 3.4.0 version we used `k-state-*` CSS classes to denote that the
 
 ## See also
 
-* [Good styling practices]({%slug good-styling-practices%})
+* [Use best practives when overriding theme styles]({%slug themes-override%}#best-practices)
+
