docs(common): Styling and Themes revamp (#2205)
* docs(common): Themes documentation revamp

* docs(common): Themes revamp next

* docs(common): Themes revamp continued

* docs(common): Themes revamp continued

* docs(common): Themes revamp continued

* chore: replace URLs with slugs

* docs(common): Themes revamp continued

* docs(common): Themes revamp continued

* fix slug

* add more links to the color system

* Update accessibility/accessibility-swatch.md

Co-authored-by: Yordan <60105689+yordan-mitev@users.noreply.github.com>

* Update accessibility/accessibility-swatch.md

Co-authored-by: Yordan <60105689+yordan-mitev@users.noreply.github.com>

* Update common-features/cdn.md

Co-authored-by: Yordan <60105689+yordan-mitev@users.noreply.github.com>

* Update getting-started/vs-integration/upgrade-wizard.md

Co-authored-by: Yordan <60105689+yordan-mitev@users.noreply.github.com>

* Update getting-started/vs-integration/upgrade-wizard.md

Co-authored-by: Yordan <60105689+yordan-mitev@users.noreply.github.com>

* Update knowledge-base/common-telerik-themes-libman.md

Co-authored-by: Yordan <60105689+yordan-mitev@users.noreply.github.com>

* Update knowledge-base/common-telerik-themes-libman.md

Co-authored-by: Yordan <60105689+yordan-mitev@users.noreply.github.com>

* Update knowledge-base/common-telerik-themes-libman.md

Co-authored-by: Yordan <60105689+yordan-mitev@users.noreply.github.com>

* Update styling-and-themes/theme-swatches.md

Co-authored-by: Yordan <60105689+yordan-mitev@users.noreply.github.com>

* Update styling-and-themes/theme-swatches.md

Co-authored-by: Yordan <60105689+yordan-mitev@users.noreply.github.com>

* polishing

* Update getting-started/vs-code-integration/new-project-wizard.md

* fix slug

* Improve Change Theme Runtime KB

---------

Co-authored-by: Yordan <60105689+yordan-mitev@users.noreply.github.com>

--- a/upgrade/rendering-changes/6-0-0.md
+++ b/upgrade/rendering-changes/6-0-0.md
@@ -587,4 +587,4 @@ The child `div` of the TreeView item container (`li.k-treeview-item > div`) rend
 
 ## See Also
 
-* [Best Practices for Styling Telerik UI for Blazor Components]({%slug good-styling-practices%})
+* [Use best practives when overriding theme styles]({%slug themes-override%}#best-practices)
